# rsai

./: CLAUDE.md  Cargo.toml  README.md  todo-order.txt
.github/workflows/: rust-ci.yml
ai-macros/: Cargo.toml
ai-macros/src/: lib.rs  tool.rs  tools.rs
ai-macros/tests/: compile_fail.rs  integration_test.rs  tools_macro_test.rs  validation_errors.rs
ai-macros/tests/ui/: extra_param_in_docstring.rs  extra_param_in_docstring.stderr  missing_param_description.rs  missing_param_description.stderr
examples/: function_calling.rs  gemini.rs  generation_config.rs  http_config.rs  inspector.rs  openrouter.rs  structured_generation.rs  text_generation.rs  tool_context.rs  tracing.rs
examples/function-calling/: main.rs
examples/http_config/: main.rs
examples/openrouter/: main.rs
examples/simple-chat/: main.rs
examples/stream-chat/: main.rs
examples/structured-generation/: main.rs
macros/: Cargo.toml  LICENSE  README.md
macros/src/: lib.rs  tool.rs  tools.rs
macros/tests/: integration_test.rs  tools_macro_test.rs  validation_errors.rs
macros/tests/ui/: extra_param_in_docstring.rs  extra_param_in_docstring.stderr  missing_param_description.rs  missing_param_description.stderr
src/: core.rs  error.rs  lib.rs  main.rs  model.rs  provider.rs  tool.rs
src/completions/: client.rs  mod.rs
src/core/: builder.rs  error.rs  http.rs  llm.rs  tool_guard.rs  traits.rs  types.rs
src/model/: chat.rs
src/provider/: constants.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs
src/responses/: client.rs  mod.rs  request.rs  response.rs  types.rs
tests/: client_loop_tests.rs  integration_tests.rs  tool_calling_safeguards_test.rs  tool_context_tests.rs  tool_registry_tests.rs
