[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
dotenv = "0.15.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
