[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "rsai"
version = "0.2.1"
authors = ["Constantin Luckenbach <cluckenbach@protonmail.com>"]
edition = "2024"
description = "Predictable development for unpredictable Gen-AI models. Let the compiler handle the chaos."
homepage = "https://rsai.dev"
repository = "https://github.com/caluckenbach/rsai"
license = "MIT"
keywords = ["ai", "llm", "openai", "openrouter", "automation"]
categories = ["api-bindings"]


[workspace.dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
schemars = "1.0.4"

[dependencies]
rsai-macros = { path = "macros", version = "0.1.0-pre" }
async-trait = "0.1.87"
bytes = "1.10.1"
futures = "0.3.31"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wiremock = "0.6.5"

[[example]]
name = "function-calling"
path = "examples/function_calling.rs"

[[example]]
name = "gemini"
path = "examples/gemini.rs"

[[example]]
name = "generation-config"
path = "examples/generation_config.rs"

[[example]]
name = "http-config"
path = "examples/http_config.rs"

[[example]]
name = "openrouter"
path = "examples/openrouter.rs"

[[example]]
name = "structured-generation"
path = "examples/structured_generation.rs"

[[example]]
name = "text-generation"
path = "examples/text_generation.rs"

[[example]]
name = "tool-context"
path = "examples/tool_context.rs"

[[example]]
name = "tracing"
path = "examples/tracing.rs"
