[package]
name = "rsai-macros"
version = "0.1.0"
authors = ["Constantin Luckenbach <cluckenbach@protonmail.com>"]
edition = "2024"
description = "Macros for the rsai crate providing structured AI generation capabilities"
homepage = "https://rsai.dev"
repository = "https://github.com/caluckenbach/rsai"
license = "MIT"
keywords = ["ai", "llm", "macros", "procedural-macros", "code-generation"]
categories = ["api-bindings", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.21.3"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
trybuild = "1.0"
rsai = { path = ".." }
tokio = { version = "1.0", features = ["macros", "rt"] }
